--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>אתר קופונים</title>
   </head>
-  <body dir="rtl">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
